--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,8 +1,13 @@
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.GridPane?>
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+
 <GridPane fx:controller="sample.Controller"
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+
+    <TextField fx:id="textField" GridPane.rowIndex="0" />
+    <Button onAction="#ButtonAction" GridPane.rowIndex="1" maxWidth="500" text="Ispisi brojeve"/>
+
+    <Label fx:id="outputArea" GridPane.rowIndex="2"/>
 </GridPane>
